<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.usi.aliannejadi.usearch.PostTaskQuestionnaireActivity">

    <TextView
        android:id="@+id/post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/post_task_questionnaire_title"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- q1 -->

    <TextView
        android:id="@+id/post_q1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/post_q1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/post_title"
        app:layout_constraintRight_toLeftOf="@+id/post_c1"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <CheckBox
        android:id="@+id/post_c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q1" />

    <!-- q2 -->

    <TextView
        android:id="@+id/post_q2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c2"
        app:layout_constraintTop_toBottomOf="@+id/post_q1" />

    <CheckBox
        android:id="@+id/post_c2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q2" />

    <!-- q3 -->

    <TextView
        android:id="@+id/post_q3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c3"
        app:layout_constraintTop_toBottomOf="@+id/post_q2" />

    <CheckBox
        android:id="@+id/post_c3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q3" />

    <!-- q4 -->

    <TextView
        android:id="@+id/post_q4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c4"
        app:layout_constraintTop_toBottomOf="@+id/post_q3" />

    <CheckBox
        android:id="@+id/post_c4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q4" />

    <!-- q5 -->

    <TextView
        android:id="@+id/post_q5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c5"
        app:layout_constraintTop_toBottomOf="@+id/post_q4" />

    <CheckBox
        android:id="@+id/post_c5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q5" />

    <!-- q6 -->

    <TextView
        android:id="@+id/post_q6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c6"
        app:layout_constraintTop_toBottomOf="@+id/post_q5" />

    <CheckBox
        android:id="@+id/post_c6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q6" />

    <!-- q7 -->

    <TextView
        android:id="@+id/post_q7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c7"
        app:layout_constraintTop_toBottomOf="@+id/post_q6" />

    <CheckBox
        android:id="@+id/post_c7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q7" />

    <!-- q8 -->

    <TextView
        android:id="@+id/post_q8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c8"
        app:layout_constraintTop_toBottomOf="@+id/post_q7" />

    <CheckBox
        android:id="@+id/post_c8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q8" />

    <!-- q9 -->

    <TextView
        android:id="@+id/post_q9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c9"
        app:layout_constraintTop_toBottomOf="@+id/post_q8" />

    <CheckBox
        android:id="@+id/post_c9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q9" />

    <!-- q10 -->

    <TextView
        android:id="@+id/post_q10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/post_q10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_c10"
        app:layout_constraintTop_toBottomOf="@+id/post_q9" />

    <CheckBox
        android:id="@+id/post_c10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/post_q10" />

    <Button
        android:id="@+id/submit_post_form"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/submit_form_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="submitAnswers"/>


</android.support.constraint.ConstraintLayout>