<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.usi.aliannejadi.usearch.MainActivity">

    <FrameLayout
        android:id="@+id/textFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/surveyButton">

        <EditText
            android:id="@+id/queryField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/query_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:onClick="queryFieldClicked"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/searchButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:drawablePadding="24dp"
            android:background="@drawable/clear"
            android:onClick="clearText"
            android:visibility="invisible" />

    </FrameLayout>

    <TextView
        android:id="@+id/select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_select_the_app_you_used_to_complete_the_task"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/q_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_enter_the_query_you_used_to_complete_the_task"
        app:layout_constraintTop_toBottomOf="@id/textFrame"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textFrame"
        />

    <!--<EditText-->
    <!--android:id="@+id/queryField"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:ems="10"-->
    <!--android:hint="@string/query_hint"-->
    <!--android:inputType="textPersonName"-->
    <!--android:onClick="queryFieldClicked"-->
    <!--android:imeOptions="actionDone"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintRight_toLeftOf="@+id/searchButton"-->
    <!--android:layout_marginRight="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginEnd="8dp" />-->


    <TextView
        android:id="@+id/spelling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFrame" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/backgroundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchPadding="16dp"
        android:text="@string/background_switch_label"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/taskHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:alpha="0"
        android:text="@string/search_for_something_you_need"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundSwitch" />


    <Button
        android:id="@+id/idButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="showID"
        app:layout_constraintRight_toLeftOf="@id/surveyButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_app_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/searchButton" />

    <Button
        android:id="@+id/finishTaskButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/proceed_to_next_task"
        android:onClick="finishTask"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/surveyButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="openSurvey"
        android:text="@string/open_the_survey"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintLeft_toRightOf="@id/idButton"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/searchButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="submitQuery"
        android:text="@string/search"
        android:visibility="invisible"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        app:layout_constraintBottom_toTopOf="@+id/backgroundSwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ListView
        android:id="@+id/resultsList"
        android:layout_width="373dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/q_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_text"
        app:layout_constraintVertical_bias="0.0" />



</android.support.constraint.ConstraintLayout>
